--- a/src/components/ImagePagination/index.module.less
+++ b/src/components/ImagePagination/index.module.less
@@ -6,6 +6,9 @@
   overflow: auto;
   margin-right: -8px;
   padding-right: 8px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 
   .btn {
     width: 100%;
