--- a/packages/app/src/index.css
+++ b/packages/app/src/index.css
@@ -7,7 +7,7 @@
 .btn-group {
   width: 300px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .children {
